Update plot creation script.

--- a/notebooks/comparable_score_ranges/create_plot.ipynb
+++ b/notebooks/comparable_score_ranges/create_plot.ipynb
@@ -1,16 +1,27 @@
 {
  "cells": [
   {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# This notebook creates the plots for the comparability evaluation of the different scoring methods.\n",
+    "This notebook is structured as follows:\n",
+    "1. Load the results of the comparability evaluation. **NOTE**: The results are not provided in the repository. Need to run the evaluation first: `experiments/run_comp_range_exp.sh`\n",
+    "2. Create confusion matrix plots (Suppl. Figure S7 & S9)\n",
+    "3. Create performance overview tables (Suppl. Table S2 & S3)\n",
+    "4. Show the difference in performance for cansig pp and non-canisg pp (Suppl. Figure S12)\n",
+    "5. Compute performance plots for main text Figure 2 (Scatter plot & Bar plot)"
+   ],
+   "id": "2c548554184d35e9"
+  },
+  {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:30.782007Z",
-     "start_time": "2024-12-05T13:34:28.972056Z"
-    }
+    "collapsed": true
    },
    "source": [
+    "from io import StringIO\n",
     "from pathlib import Path\n",
     "\n",
     "import matplotlib.path as mpath\n",
@@ -26,48 +37,36 @@
     "plt.rcParams.update({'pdf.fonttype': 42, 'font.family': 'sans-serif', 'font.sans-serif': 'Arial', 'font.size': 10})"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:30.838803Z",
-     "start_time": "2024-12-05T13:34:30.829090Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
-   "source": "from ANS_supplementary_information.data.constants import BASE_PATH_RESULTS",
+   "source": [
+    "from ANS_supplementary_information.data.constants import BASE_PATH_RESULTS\n",
+    "from ANS_supplementary_information.data.load_data import load_signatures"
+   ],
    "id": "92afa7f13361f53d",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:30.848555Z",
-     "start_time": "2024-12-05T13:34:30.845553Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "exp_path = Path(BASE_PATH_RESULTS) / 'comparable_score_ranges'\n",
     "\n",
     "storing_path = exp_path / 'plots'\n",
-    "SAVE = False\n",
+    "SAVE = True\n",
     "if SAVE:\n",
     "    storing_path.mkdir(parents=True, exist_ok=True)\n"
    ],
    "id": "358dfd8da4148966",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:31.127799Z",
-     "start_time": "2024-12-05T13:34:31.039116Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "dfs = []\n",
@@ -85,42 +84,10 @@
    ],
    "id": "2b7f2b540214a1ff",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:31.145691Z",
-     "start_time": "2024-12-05T13:34:31.141057Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "all_ds.columns",
-   "id": "ba59486a3ed4a244",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['metric', 'ANS', 'Seurat', 'Seurat_AG', 'Seurat_LVG', 'Scanpy',\n",
-       "       'Jasmine_LH', 'Jasmine_OR', 'UCell', 'cell_type', 'tissue_type',\n",
-       "       'use_gene_pool', 'signatures'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 5
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:31.242987Z",
-     "start_time": "2024-12-05T13:34:31.235626Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "all_ds = pd.melt(\n",
@@ -132,15 +99,10 @@
    ],
    "id": "8b98028d00a26f8c",
    "outputs": [],
-   "execution_count": 6
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:31.265611Z",
-     "start_time": "2024-12-05T13:34:31.255300Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "all_ds = pd.pivot(all_ds,\n",
@@ -150,15 +112,10 @@
    ],
    "id": "4e63c8ba0fb42287",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:31.282554Z",
-     "start_time": "2024-12-05T13:34:31.276950Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "float_cols = ['balanced_accuracy', 'f1_score', 'gmm_balanced_accuracy',\n",
@@ -171,15 +128,10 @@
    ],
    "id": "61d23ae36fa3364e",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:31.296844Z",
-     "start_time": "2024-12-05T13:34:31.294768Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "style_order = [\n",
@@ -195,15 +147,10 @@
    ],
    "id": "3100c9bcab3c728",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": null
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T13:34:31.311296Z",
-     "start_time": "2024-12-05T13:34:31.308148Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
     "all_ds['cell_type_pp'] = all_ds.cell_type.map({\"breast_malignant\": 'BRCA (6 states)',\n",
@@ -220,45 +167,187 @@
    ],
    "id": "c77e2d3dcb0995f6",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "#### Create performance overview table",
-   "id": "b657efc5bf742c32"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T14:50:38.326036Z",
-     "start_time": "2024-12-05T14:50:38.320123Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "all_ds = all_ds.sort_values(by=['signatures', 'use_gene_pool', 'tissue_type', 'cell_type_pp'])",
-   "id": "763a1a11ff546894",
-   "outputs": [],
-   "execution_count": 96
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-12-05T14:50:39.569076Z",
-     "start_time": "2024-12-05T14:50:39.566659Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "grouped_all_ds = all_ds.groupby(['signatures', 'use_gene_pool'])",
-   "id": "77f4c6df89080c15",
-   "outputs": [],
-   "execution_count": 98
+   "source": "## Create confusion matrix plots",
+   "id": "1b22e1884fbc001e"
   },
   {
    "metadata": {},
    "cell_type": "code",
+   "source": [
+    "con_mat_cols = set(all_ds.columns) - {'gmm_balanced_accuracy', 'gmm_f1_score', 'gmm_jaccard_score', 'jaccard_score',\n",
+    "                                      'logreg_balanced_accuracy_10cv_mean', 'logreg_balanced_accuracy_10cv_std',\n",
+    "                                      'logreg_f1_weighted_10cv_mean', 'logreg_f1_weighted_10cv_std',\n",
+    "                                      'logreg_jaccard_weighted_10cv_mean', 'logreg_jaccard_weighted_10cv_std'}\n",
+    "conf_mat_data = all_ds[sorted(list(con_mat_cols))].copy()\n",
+    "conf_mat_data.columns"
+   ],
+   "id": "c0afd2b9063138d7",
    "outputs": [],
-   "execution_count": null,
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "# conf_mat_data.groupby(['cell_type','cell_type_pp', 'tissue_type', 'use_gene_pool', 'signatures']).size()",
+   "id": "ef621243786bf4b9",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def parse_matrix_str(matrix_str):\n",
+    "    cleaned = matrix_str.replace('\\n  ', ' ').replace('[', '').replace(']', '')\n",
+    "    return np.loadtxt(StringIO(cleaned))"
+   ],
+   "id": "3800b77eeee22e36",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "conf_mat_data['conf_mat'] = conf_mat_data['conf_mat'].apply(parse_matrix_str)",
+   "id": "dacbd761e16fa4f7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "conf_mat_data['cell_type'].unique()",
+   "id": "8ba6e61d438fb805",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "sigs = {}\n",
+    "for ds in conf_mat_data.cell_type.unique():\n",
+    "    sigs[ds] = list(sorted(load_signatures(ds).keys()))"
+   ],
+   "id": "20369947841a04c3",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "import textwrap\n",
+    "\n",
+    "width_text_wrap = 7\n",
+    "\n",
+    "\n",
+    "def pp_lbl(ds, lbl):\n",
+    "    if 'ovarian' in ds:\n",
+    "        return lbl.replace('cell.', '').replace('cancer.', 'C.').replace('Cancer.', 'C.').replace('Cycling.', 'Cyc.')\n",
+    "    elif 'skin' in ds:\n",
+    "        return lbl.replace('Cycling', 'Cyc.').replace('Tumor', 'Tum.')\n",
+    "    elif 'b_subtypes' in ds:\n",
+    "        return lbl.replace('intermediate', 'interm.').replace('memory', 'mem.').replace('Cancer.', 'C.')\n",
+    "    elif 'cd4_subtypes' in ds:\n",
+    "        return lbl.replace('Proliferating', 'Prolif.')\n",
+    "    elif 'cd8_subtypes' in ds:\n",
+    "        return lbl.replace('Proliferating', 'Prolif.')\n",
+    "    return lbl\n",
+    "\n",
+    "\n",
+    "for k, v in sigs.items():\n",
+    "    sigs[k] = [textwrap.fill(pp_lbl(k, curr_sig), width=width_text_wrap) for curr_sig in v]\n"
+   ],
+   "id": "6d107567553985aa",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "subfig_size = 4.2\n",
+    "for key, data in conf_mat_data.groupby(['tissue_type', 'use_gene_pool', 'signatures']):\n",
+    "    if key[0] == 'Cancer':\n",
+    "        continue\n",
+    "    # filter out the different preprocessing strategies\n",
+    "    if key[0] == 'Cancer':\n",
+    "        data = data[~ data['cell_type_pp'].str.contains(', ')].copy()\n",
+    "\n",
+    "    # get the number of different scoring methods and datasets\n",
+    "    n_sc_methods = data['scoring_method'].nunique()\n",
+    "    n_ds = data['cell_type_pp'].nunique()\n",
+    "\n",
+    "    fig, axes = plt.subplots(nrows=n_sc_methods, ncols=n_ds, figsize=(n_ds * subfig_size, n_sc_methods * subfig_size),\n",
+    "                             sharey=False, sharex='col')\n",
+    "\n",
+    "    axes = axes.flatten()\n",
+    "    for i, (sc_method, sc_data) in enumerate(data.groupby(['scoring_method', 'cell_type', 'cell_type_pp'])):\n",
+    "        assert len(sc_data) == 1\n",
+    "        ax = axes[i]\n",
+    "        conf_map = sc_data['conf_mat'].iloc[0]\n",
+    "        bal_acc = sc_data['balanced_accuracy'].iloc[0]\n",
+    "\n",
+    "        sns.heatmap(conf_map, ax=ax, annot=True, fmt='.2f', cmap='coolwarm', cbar=False, vmin=0, vmax=1)\n",
+    "        ax.set_title(f'{sc_method[2]} – {bal_acc:.2f} bal. acc.', fontsize=11, weight='bold')\n",
+    "        if i % n_ds == 0:\n",
+    "            ax.set_ylabel(sc_method[0], fontsize=11, weight='bold')\n",
+    "\n",
+    "\n",
+    "        # set tick labels\n",
+    "        def pp_lbl(lbl):\n",
+    "            if 'HGSOC' in sc_method[2]:\n",
+    "                return lbl.replace('cell.', '').replace('cancer.', 'C.').replace('Cancer.', 'C.')\n",
+    "            return lbl\n",
+    "\n",
+    "\n",
+    "        tick_lbls = sigs[sc_data['cell_type'].iloc[0]]\n",
+    "        ax.set_xticks(np.arange(len(tick_lbls)) + 0.5, tick_lbls)\n",
+    "        ax.set_yticks(np.arange(len(tick_lbls)) + 0.5, tick_lbls, rotation=0)\n",
+    "    fig.tight_layout()\n",
+    "\n",
+    "    wspace = 0.21 if key[0] == 'Cancer' else 0.25\n",
+    "    fig.subplots_adjust(wspace=wspace, hspace=0.15)\n",
+    "\n",
+    "    suffix = f\"{key[0].lower()}_{'with' if key[1] else 'without'}_gene_pool_{key[2].replace(' ', '_').lower()}\"\n",
+    "    save_close_or_show(fig, SAVE, save_path=storing_path / f'conf_mats_{suffix}.pdf')\n",
+    "    save_close_or_show(fig, SAVE, save_path=storing_path / f'conf_mats_{suffix}.svg')"
+   ],
+   "id": "1eee3e4c1caf72ae",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "## Create performance overview table",
+   "id": "b657efc5bf742c32"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "all_ds = all_ds.sort_values(by=['signatures', 'use_gene_pool', 'tissue_type', 'cell_type_pp'])",
+   "id": "763a1a11ff546894",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "grouped_all_ds = all_ds.groupby(['signatures', 'use_gene_pool'])",
+   "id": "77f4c6df89080c15",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
    "source": [
     "def metric_type(x):\n",
     "    if 'balanced_accuracy' in x:\n",
@@ -278,13 +367,13 @@
     "    else:\n",
     "        return 'Hard labeling score'"
    ],
-   "id": "10efcedd0db45b0d"
+   "id": "10efcedd0db45b0d",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "for group, data in grouped_all_ds:\n",
     "    print(group)\n",
@@ -319,12 +408,14 @@
     "        perf_table.to_excel(storing_path / fn)\n",
     "        print(f'Stored {storing_path / fn}')"
    ],
-   "id": "6f00d4faaf123e10"
+   "id": "6f00d4faaf123e10",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "#### Show difference in performance for cansig pp and non-canisg pp",
+   "source": "## Show difference in performance for cansig pp and non-canisg pp",
    "id": "351cb9caa38214d"
   },
   {
@@ -369,6 +460,7 @@
    "source": [
     "luad_results = all_ds[all_ds.cell_type.str.contains('luad_kim')].copy()\n",
     "fig = compare_two_scoring_methods(luad_results)\n",
+    "save_close_or_show(fig, SAVE, save_path=storing_path / 'luad_ds_pp_diff.pdf')\n",
     "save_close_or_show(fig, SAVE, save_path=storing_path / 'luad_ds_pp_diff.svg')"
    ],
    "id": "94ec0315377f1f69",
@@ -381,6 +473,7 @@
    "source": [
     "skin_results = all_ds[all_ds.cell_type.str.contains('skin')].copy()\n",
     "fig = compare_two_scoring_methods(skin_results)\n",
+    "save_close_or_show(fig, SAVE, save_path=storing_path / 'skin_ds_pp_diff.pdf')\n",
     "save_close_or_show(fig, SAVE, save_path=storing_path / 'skin_ds_pp_diff.svg')"
    ],
    "id": "36806b219e992284",
@@ -390,8 +483,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Compute performance plots",
+   "source": "## Compute performance plots",
    "id": "e2d4302b4f9e131"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Scatter plot",
+   "id": "21264a15a48f72b0"
   },
   {
    "metadata": {},
@@ -422,7 +521,7 @@
     "    'Jasmine_LH',\n",
     "    'Jasmine_OR',\n",
     "    'UCell'\n",
-    "]"
+    "]\n"
    ],
    "id": "ceac950fb11ed8c",
    "outputs": [],
@@ -439,6 +538,7 @@
     "    df = df.copy()\n",
     "    df['Scoring Method'] = df['scoring_method']\n",
     "    df['Cell types'] = df['cell_type_pp']\n",
+    "    hue_order = df.sort_values(['tissue_type', 'Cell types'])['Cell types'].unique()\n",
     "    g = sns.relplot(\n",
     "        data=df,\n",
     "        x='balanced_accuracy',\n",
@@ -446,6 +546,7 @@
     "        style='Scoring Method',\n",
     "        style_order=style_order,\n",
     "        hue='Cell types',\n",
+    "        hue_order=hue_order,\n",
     "        # col='tissue_type',\n",
     "        # row='signatures',\n",
     "        col='signatures',\n",
@@ -573,9 +674,99 @@
     "    fig = plot_scatter(data, scale_imbalance_pivot)\n",
     "    use_gp, sig_pp = key\n",
     "    suffix = f\"{'with' if use_gp else 'without'}_gene_pool_{sig_pp.replace(' ', '_').lower()}\"\n",
+    "    save_close_or_show(fig, SAVE, save_path=storing_path / f'perf_overview_{suffix}.pdf')\n",
     "    save_close_or_show(fig, SAVE, save_path=storing_path / f'perf_overview_{suffix}.svg')"
    ],
    "id": "28047ac3e879969",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Bar plot",
+   "id": "4cef25b8abe6ac98"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def plot_balanced_accuracy_barplot(dat, style_order, width_cm=18, height_cm=7.5):\n",
+    "    # Convert cm to inches\n",
+    "    width_inches = width_cm * 0.393701\n",
+    "    height_inches = height_cm * 0.393701\n",
+    "\n",
+    "    # Create figure\n",
+    "    fig = plt.figure(figsize=(width_inches, height_inches))\n",
+    "\n",
+    "    # Create the main barplot\n",
+    "    ax = sns.barplot(\n",
+    "        data=dat,\n",
+    "        y='balanced_accuracy',\n",
+    "        x='cell_type_pp',\n",
+    "        order=dat.sort_values(['tissue_type', 'cell_type_pp'])['cell_type_pp'].unique(),\n",
+    "        hue='scoring_method',\n",
+    "        hue_order=style_order,\n",
+    "        dodge=True,\n",
+    "        linewidth=0.01\n",
+    "    )\n",
+    "\n",
+    "    # Customize the plot\n",
+    "    plt.xticks(rotation=45, ha='right', fontsize=10)\n",
+    "    plt.yticks(fontsize=9)\n",
+    "    plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "\n",
+    "    # Adjust labels\n",
+    "    plt.xlabel('', fontsize=10)\n",
+    "    plt.ylabel('Balanced Accuracy', fontsize=10)\n",
+    "\n",
+    "    # Customize legend\n",
+    "    plt.legend(\n",
+    "        title='Scoring Method',\n",
+    "        bbox_to_anchor=(1.01, 1),\n",
+    "        loc='upper left',\n",
+    "        borderaxespad=0,\n",
+    "        fontsize=10,\n",
+    "        title_fontsize=10,\n",
+    "        edgecolor='white'\n",
+    "    )\n",
+    "\n",
+    "    # Adjust layout\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "    # Set y-axis limits\n",
+    "    spread = dat['balanced_accuracy'].max() - dat['balanced_accuracy'].min()\n",
+    "    plt.ylim(\n",
+    "        dat['balanced_accuracy'].min() - 0.05 * spread,\n",
+    "        dat['balanced_accuracy'].max() + 0.05 * spread\n",
+    "    )\n",
+    "\n",
+    "    return fig, ax"
+   ],
+   "id": "5458feb994edb4b",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "for key, data in all_ds.groupby(['use_gene_pool', 'signatures']):\n",
+    "    fig, ax = plot_balanced_accuracy_barplot(data, style_order)\n",
+    "    use_gp, sig_pp = key\n",
+    "    suffix = f\"{'with' if use_gp else 'without'}_gene_pool_{sig_pp.replace(' ', '_').lower()}\"\n",
+    "    save_close_or_show(fig, SAVE, save_path=storing_path / f'perf_bar_{suffix}.pdf')\n",
+    "    save_close_or_show(fig, SAVE, save_path=storing_path / f'perf_bar_{suffix}.svg')\n"
+   ],
+   "id": "2d33cde7d829869c",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "",
+   "id": "3ac9330caf95f685",
    "outputs": [],
    "execution_count": null
   }
